--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,12 +1,17 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:b="http://bootsfaces.net/ui">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Inicializando ChatUó
+        
+        <b:modal title="Modal Example" styleClass="loginModal" closable="false" closeOnEscape="false" backdrop="false">
+            Login ChatUÓ
+        </b:modal>
+        <b:button value="Login" look="success" onclick="$('.loginModal').modal()" size="lg"/>
     </h:body>
 </html>
 
